# fly_in

./: .gitignore  Makefile  README.md  main.py  parser.py  pyproject.toml
maps/custom/: 01_custom_delta_v2.txt  01_multi_path_convergence.txt  02_feedback_loop_puzzle.txt  03_custom_highway.txt  03_layered_bottleneck.txt  04_custom_labyrinth_city.txt  04_diamond_network.txt  05_load_balancing_challenge.txt  06_crossroads.txt  07_diamond_squeeze.txt  08_grid_wars.txt  09_highway_hell.txt
maps/easy/: 01_linear_path.txt  03_basic_capacity.txt
maps/test/: color_test.txt  parsing_test.txt  test.txt  test2.txt
rendering/: __init__.py  data.py  draw.py  menu.py  renderer.py  terminal.py
src/: __init__.py  builder.py  connection.py  drone.py  flyin.py  graph.py  main.py  manager.py  parser.py  pathfinder.py  scheduler.py  types.py  zone.py
